--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/4258465b7e.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>nftlanding</title>
   </head>
@@ -38,7 +42,119 @@
           <img src="./assets/graphic.svg" alt="pink-form" />
         </div>
       </section>
-      <section class="free-nft"></section>
+      <section class="free-nft">
+        <img
+          id="main-background"
+          src="./assets/background.svg"
+          alt="background-img"
+        />
+        <div class="absolute">
+          <h1>Free NFT for early birds</h1>
+          <p>Sign up today and you'll get a free NFT when we launch</p>
+        </div>
+        <div class="companies-logo">
+          <img src="./assets/companies/1.svg" alt="boomerang-logo" />
+          <img src="./assets/companies/2.svg" alt="Blimp-logo" />
+          <img src="./assets/companies/3.svg" alt="qrco-logo" />
+          <img src="./assets/companies/5.svg" alt="Droplet-logo" />
+        </div>
+      </section>
+      <section class="le-super">
+        <div>
+          <h1>LE Super Rare Auction</h1>
+          <p>
+            We have released four limited edition NFTs early which can be bid on
+            via OpenSea.
+          </p>
+        </div>
+        <div class="card">
+          <div class="card-container">
+            <img src="./assets/ntfs/ntf-1.svg" alt="purple-man" />
+            <div class="card-flex">
+              <h6>GLOOP SERIES</h6>
+              <h6>TOP BID</h6>
+            </div>
+            <div class="card-flex">
+              <h4>Purple Man</h4>
+              <p><img src="./assets/eth.svg" alt="etherium-logo" /> 2.99 ETH</p>
+            </div>
+            <div class="card-flex">
+              <p>#12983</p>
+              <p>1 day left</p>
+            </div>
+          </div>
+          <div class="card-container">
+            <img src="./assets/ntfs/nft-2.svg" alt="nfts-girl" />
+            <div class="card-flex">
+              <h6>GLOOP SERIES</h6>
+              <h6>TOP BID</h6>
+            </div>
+            <div class="card-flex">
+              <h4>Purple Man</h4>
+              <p><img src="./assets/eth.svg" alt="etherium-logo" /> 2.99 ETH</p>
+            </div>
+            <div class="card-flex">
+              <p>#12983</p>
+              <p>1 day left</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="launching-content">
+        <div class="flex one">
+          <h5 class="text-purple">launching soon</h5>
+          <h1>An NFT like no other</h1>
+          <p>
+            Don't miss out on the release of our new NFT. Sign up below to
+            receive updates.
+          </p>
+          <button type="button">Sign up</button>
+        </div>
+        <div class="img">
+          <img src="./assets/upsell-footer-image.svg" alt="pink-form" />
+        </div>
+      </section>
     </main>
+    <footer>
+      <img src="./assets/logo.svg" alt="footer-logo" />
+      <p>Exclusive NFT Collection</p>
+      <div class="font-awesome">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-tiktok"></i>
+      </div>
+      <div class="about nav">
+        <h4>ABOUT</h4>
+        <ul>
+          <li>About</li>
+          <li>Terms</li>
+          <li>Legal</li>
+        </ul>
+      </div>
+      <div class="nft nav">
+        <h4>NFT</h4>
+        <ul>
+          <li>OpenSea</li>
+          <li>Maker</li>
+          <li>Learn</li>
+        </ul>
+      </div>
+      <div class="contact nav">
+        <h4>CONTACT</h4>
+        <ul>
+          <li>Press</li>
+          <li>Support</li>
+        </ul>
+      </div>
+      <div class="social nav">
+        <h4>SOCIAL</h4>
+        <ul>
+          <li>Twitter</li>
+          <li>Instagram</li>
+        </ul>
+      </div>
+      <p>C Copyright 2022 NFTlanding</p>
+    </footer>
   </body>
 </html>
