--- a/index.html
+++ b/index.html
@@ -29,22 +29,20 @@
     </header>
     <main>
       <section class="launching-content">
-        <div class="flex one">
-          <h5 class="text-purple">launching soon</h5>
-          <h1>An NFT like no other</h1>
+        <div class="flex-one">
+          <p class="text-purple">launching soon</p>
+          <h1 class="font-size">An NFT like no other</h1>
           <p>
             Don't miss out on the release of our new NFT. Sign up below to
             receive updates when we go live
           </p>
           <button type="button">Sign up</button>
-        </div>
-        <div class="img">
-          <img src="./assets/graphic.svg" alt="pink-form" />
+          <img src="./assets/graphic.png" alt="pink-form" />
         </div>
       </section>
       <section class="free-nft">
         <img
-          id="main-background"
+          id="background"
           src="./assets/background.svg"
           alt="background-img"
         />
@@ -53,14 +51,22 @@
           <p>Sign up today and you'll get a free NFT when we launch</p>
         </div>
         <div class="companies-logo">
-          <img src="./assets/companies/1.svg" alt="boomerang-logo" />
-          <img src="./assets/companies/2.svg" alt="Blimp-logo" />
-          <img src="./assets/companies/3.svg" alt="qrco-logo" />
-          <img src="./assets/companies/5.svg" alt="Droplet-logo" />
+          <div class="boomerang">
+            <img src="./assets/companies/1.svg" alt="boomerang-logo" />
+          </div>
+          <div class="blimp">
+            <img src="./assets/companies/2.svg" alt="Blimp-logo" />
+          </div>
+          <div class="qrco">
+            <img src="./assets/companies/3.svg" alt="qrco-logo" />
+          </div>
+          <div class="droplet">
+            <img src="./assets/companies/5.svg" alt="Droplet-logo" />
+          </div>
         </div>
       </section>
-      <section class="le-super">
-        <div>
+      <section>
+        <div class="le-super">
           <h1>LE Super Rare Auction</h1>
           <p>
             We have released four limited edition NFTs early which can be bid on
@@ -71,46 +77,84 @@
           <div class="card-container">
             <img src="./assets/ntfs/ntf-1.svg" alt="purple-man" />
             <div class="card-flex">
-              <h6>GLOOP SERIES</h6>
+              <h6><span class="gold-text">GLOOP SERIES</span></h6>
               <h6>TOP BID</h6>
             </div>
             <div class="card-flex">
               <h4>Purple Man</h4>
-              <p><img src="./assets/eth.svg" alt="etherium-logo" /> 2.99 ETH</p>
+              <h4>
+                <img src="./assets/eth.svg" alt="etherium-logo" /> 2.99 ETH
+              </h4>
             </div>
             <div class="card-flex">
-              <p>#12983</p>
-              <p>1 day left</p>
+              <p class="text-gray">#12983</p>
+              <p class="text-gray">1 day left</p>
             </div>
           </div>
           <div class="card-container">
             <img src="./assets/ntfs/nft-2.svg" alt="nfts-girl" />
             <div class="card-flex">
-              <h6>GLOOP SERIES</h6>
+              <h6><span class="gold-text">GLOOP SERIES</span></h6>
               <h6>TOP BID</h6>
             </div>
             <div class="card-flex">
-              <h4>Purple Man</h4>
-              <p><img src="./assets/eth.svg" alt="etherium-logo" /> 2.99 ETH</p>
+              <h4>Beige</h4>
+              <h4>
+                <img src="./assets/eth.svg" alt="etherium-logo" /> 2.99 ETH
+              </h4>
             </div>
             <div class="card-flex">
-              <p>#12983</p>
-              <p>1 day left</p>
+              <p class="text-gray">#12983</p>
+              <p class="text-gray">1 day left</p>
+            </div>
+          </div>
+          <div class="card-container">
+            <img src="./assets/ntfs/ntf-3.svg" alt="nfts-girl" />
+            <div class="card-flex">
+              <h6><span class="gold-text">GLOOP SERIES</span></h6>
+              <h6>TOP BID</h6>
+            </div>
+            <div class="card-flex">
+              <h4>Red Man</h4>
+              <h4>
+                <img src="./assets/eth.svg" alt="etherium-logo" /> 2.99 ETH
+              </h4>
+            </div>
+            <div class="card-flex">
+              <p class="text-gray">#12983</p>
+              <p class="text-gray">1 day left</p>
+            </div>
+          </div>
+          <div class="card-container">
+            <img src="./assets/ntfs/ntf-4.svg" alt="nfts-girl" />
+            <div class="card-flex">
+              <h6><span class="gold-text">GLOOP SERIES</span></h6>
+              <h6>TOP BID</h6>
+            </div>
+            <div class="card-flex">
+              <h4>Green</h4>
+              <h4>
+                <img src="./assets/eth.svg" alt="etherium-logo" /> 2.99 ETH
+              </h4>
+            </div>
+            <div class="card-flex">
+              <p class="text-gray">#12983</p>
+              <p class="text-gray">1 day left</p>
             </div>
           </div>
         </div>
       </section>
       <section class="launching-content">
-        <div class="flex one">
-          <h5 class="text-purple">launching soon</h5>
-          <h1>An NFT like no other</h1>
-          <p>
+        <div class="flex-two">
+          <p class="text-purple">launching soon</p>
+          <h1 class="font-size footer-h1">An NFT like no other</h1>
+          <p class="footer-p">
             Don't miss out on the release of our new NFT. Sign up below to
             receive updates.
           </p>
           <button type="button">Sign up</button>
         </div>
-        <div class="img">
+        <div class="footer-img">
           <img src="./assets/upsell-footer-image.svg" alt="pink-form" />
         </div>
       </section>
