--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </div>
         </div>
       </section>
-      <section class="launching-content">
+      <section class="launching-content-2">
         <div class="flex-two">
           <p class="text-purple">launching soon</p>
           <h1 class="font-size footer-h1">An NFT like no other</h1>
@@ -153,8 +153,6 @@
             receive updates.
           </p>
           <button type="button">Sign up</button>
-        </div>
-        <div class="footer-img">
           <img src="./assets/upsell-footer-image.svg" alt="pink-form" />
         </div>
       </section>
@@ -168,35 +166,37 @@
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-brands fa-tiktok"></i>
       </div>
-      <div class="about nav">
-        <h4>ABOUT</h4>
-        <ul>
-          <li>About</li>
-          <li>Terms</li>
-          <li>Legal</li>
-        </ul>
-      </div>
-      <div class="nft nav">
-        <h4>NFT</h4>
-        <ul>
-          <li>OpenSea</li>
-          <li>Maker</li>
-          <li>Learn</li>
-        </ul>
-      </div>
-      <div class="contact nav">
-        <h4>CONTACT</h4>
-        <ul>
-          <li>Press</li>
-          <li>Support</li>
-        </ul>
-      </div>
-      <div class="social nav">
-        <h4>SOCIAL</h4>
-        <ul>
-          <li>Twitter</li>
-          <li>Instagram</li>
-        </ul>
+      <div class="footer-flex-item">
+        <div class="about nav">
+          <h5>ABOUT</h5>
+          <ul>
+            <li>About</li>
+            <li>Terms</li>
+            <li>Legal</li>
+          </ul>
+        </div>
+        <div class="nft nav">
+          <h5>NFT</h5>
+          <ul>
+            <li>OpenSea</li>
+            <li>Maker</li>
+            <li>Learn</li>
+          </ul>
+        </div>
+        <div class="contact nav">
+          <h5>CONTACT</h5>
+          <ul>
+            <li>Press</li>
+            <li>Support</li>
+          </ul>
+        </div>
+        <div class="social nav">
+          <h5>SOCIAL</h5>
+          <ul>
+            <li>Twitter</li>
+            <li>Instagram</li>
+          </ul>
+        </div>
       </div>
       <p>C Copyright 2022 NFTlanding</p>
     </footer>
