dekstop building with css

--- a/index.html
+++ b/index.html
@@ -14,29 +14,24 @@
   <body>
     <header>
       <img src="./assets/logo.svg" alt="header-logo" />
-      <button id="hamburger-menu">
-        <nav id="sidebar-menu">
-          <h3>Menu</h3>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Store</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
-      </button>
+      <i class="fa-solid fa-bars"></i>
+      <nav id="sidebar-menu">
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Launch</a>
+        <a href="#">Sign up</a>
+      </nav>
     </header>
     <main>
       <section class="launching-content">
         <div class="flex-one">
           <p class="text-purple">launching soon</p>
           <h1 class="font-size">An NFT like no other</h1>
-          <p>
+          <p class="font-width">
             Don't miss out on the release of our new NFT. Sign up below to
             receive updates when we go live
           </p>
-          <button type="button">Sign up</button>
+          <button class="button" type="button">Sign up</button>
           <img src="./assets/graphic.png" alt="pink-form" />
         </div>
       </section>
@@ -47,11 +42,11 @@
           alt="background-img"
         />
         <div class="absolute">
-          <h1>Free NFT for early birds</h1>
+          <h1 class="name-size">Free NFT for early birds</h1>
           <p>Sign up today and you'll get a free NFT when we launch</p>
         </div>
         <div class="companies-logo">
-          <div class="boomerang">
+          <div class="wrap">
             <img src="./assets/companies/1.svg" alt="boomerang-logo" />
           </div>
           <div class="blimp">
@@ -60,17 +55,20 @@
           <div class="qrco">
             <img src="./assets/companies/3.svg" alt="qrco-logo" />
           </div>
+          <div class="openddoor">
+            <img src="./assets/companies/4.svg" alt="" />
+          </div>
           <div class="droplet">
             <img src="./assets/companies/5.svg" alt="Droplet-logo" />
           </div>
         </div>
       </section>
-      <section>
+      <section class="nft-section">
         <div class="le-super">
-          <h1>LE Super Rare Auction</h1>
-          <p>
+          <h1 class="name-size">LE Super Rare Auction</h1>
+          <p class="font-width">
             We have released four limited edition NFTs early which can be bid on
-            via OpenSea.
+            via <a href="#">OpenSea</a>.
           </p>
         </div>
         <div class="card">
@@ -146,26 +144,32 @@
       </section>
       <section class="launching-content-2">
         <div class="flex-two">
+          <div class="line-through"></div>
           <p class="text-purple">launching soon</p>
           <h1 class="font-size footer-h1">An NFT like no other</h1>
+          <div class="line-through center-line"></div>
           <p class="footer-p">
             Don't miss out on the release of our new NFT. Sign up below to
-            receive updates.
+            receive updates when go live
           </p>
-          <button type="button">Sign up</button>
+          <button class="button" type="button">Sign up</button>
           <img src="./assets/upsell-footer-image.svg" alt="pink-form" />
         </div>
+        <div class="line-through"></div>
       </section>
     </main>
     <footer>
-      <img src="./assets/logo.svg" alt="footer-logo" />
-      <p>Exclusive NFT Collection</p>
+      <div>
+        <img src="./assets/logo.svg" alt="footer-logo" />
+        <p>Exclusive NFT Collection</p>
       <div class="font-awesome">
         <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-twitter"></i>
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-brands fa-tiktok"></i>
       </div>
+      </div>
+      <div>
       <div class="footer-flex-item">
         <div class="about nav">
           <h5>ABOUT</h5>
